Update to manage config via anyway_config
This may be a mistake, we'll see. anyway_config is poorly documented
and annoyingly automagical for me. I'm hoping it will help me manage
the config as it (theoretically) gets longer for more social media
profiles.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 .DS_Store
 /.bundle/
 /.yardoc
-/Gemfile.lock
-/config.yml
 /_yardoc/
+/config/
 /coverage/
 /doc/
+/Gemfile.lock
 /pkg/
 /spec/reports/
 /tmp/
 *.json
 *.csv
-/twitter-backup
+tweets.js
